@@ -42,7 +42,9 @@ AS_HELP_STRING([--with-]_afs_lib_name[@<:@=yes|download|<path to ]_afs_lib_name[
      not the case, use the explicit
      options directly or provide paths via ]_afs_lib_NAME[_LIB
      and ]_afs_lib_NAME[_INCLUDE. Use [download] to automatically
-     obtain and use ]_afs_lib_name[ via external tarball.])])dnl
+     obtain and use ]_afs_lib_name[ via external tarball. See
+     --with-package-cache=<path> how to provide the tarball
+     for an offline installation.])])dnl
 AC_LANG_POP([C])
 dnl
 AS_IF([test "${libbfd_summary:+set}" != set],
